# generative_art

./: README.md  pyproject.toml  requirements.txt
angular_random_walk/: angular_random_walk_01.py  angular_random_walk_02.py  angular_rundown.py  auxiliary.py  context_extension.py
chladni_eigenmodes/: README.md  fem_plot.py  fem_solver.py  fem_utils.py  random_shape.py
chladni_eigenmodes/output/: random_shape.msh
magnetic_pendulum/: pendulum_tools.py  plot_pendulum.py  render_pendulum.py
magnetic_pendulum/output/: pendulum_01.h5  pendulum_02.h5  pendulum_03.h5  pendulum_04.h5
polygon_folding/: polygon_folding.py
