[project]
name = "generative-art"
version = "0.1.0"
description = "My generative art project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py==3.15.1",
    "matplotlib==3.10.9",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "pillow==12.2.0",
    "pycairo==1.29.0",
    "scipy==1.17.1",
]
